# sudologue

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: design.md  roadmap.md
puzzles/: easy_test.py  four_by_four_test.py  nine_by_nine_test.py
sudologue/: cli.py  cli_test.py
sudologue/inference/: __init__.py  inference.py  inference_test.py  solve_result.py  solve_result_test.py
sudologue/model/: __init__.py  board.py  board_test.py  cell.py  cell_test.py  house.py  house_test.py
sudologue/narration/: __init__.py  narrator.py  narrator_test.py  policy.py
sudologue/proof/: engine.py  engine_test.py  identity.py  identity_test.py  minimizer.py  minimizer_test.py  proposition.py  proposition_test.py  scoring.py
sudologue/proof/rules/: hidden_single.py  hidden_single_test.py  naked_single.py  naked_single_test.py  rule.py
sudologue/rules/: __init__.py  hidden_single.py  hidden_single_test.py  naked_single.py  naked_single_test.py  rule.py
sudologue/solver/: __init__.py  solve_result.py  solver.py  solver_test.py
