[tool.poetry]
name = "sudologue"
version = "0.1.0"
description = "A narration-first Sudoku solver: no guesses, only receipts"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-subtests = "^0.14.1"
black = "^25.1.0"
pyright = "^1.1.398"
ruff = "^0.11.3"

[tool.black]
line-length = 88
include = 'sudologue|puzzles'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | \.pytest_cache
  | \.ruff_cache
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]
unfixable = []

[tool.pyright]
include = ["sudologue", "puzzles"]
exclude = ["**/node_modules", "**/__pycache__"]
strict = ["sudologue"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "*_test.py"
testpaths = ["sudologue", "puzzles"]
addopts = "-s --capture=no -vv --cov=sudologue --cov-report=term-missing"

[tool.poe.tasks]
format = "black ."
lint = "ruff check --fix ."
typecheck = "pyright"
test = "pytest"
all = ["format", "lint", "typecheck", "test"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
